// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiderCard Acrylic 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 32,
        "paddingBottom": 42,
        "paddingLeft": 40,
        "paddingRight": 40,
        "paddingTop": 42,
      },
      Object {
        "marginTop": 20,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 48,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADMAAAAzCAYAAAA6oTAqAAAAEXRFWHRTb2Z0d2FyZQBwbmdjcnVzaEB1SfMAAABQSURBVGje7dSxCQBACARB+2/ab8BEeQNhFi6WSYzYLYudDQYGBgYGBgYGBgYGBgYGBgZmcvDqYGBgmhivGQYGBgYGBgYGBgYGBgYGBgbmQw+P/eMrC5UTVAAAAABJRU5ErkJggg==",
        }
      }
      style={
        Object {
          "borderRadius": 0,
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={32}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 32,
                },
                Array [
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 32,
                    "fontWeight": undefined,
                    "marginLeft": 16,
                  },
                  undefined,
                ],
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        Function
      </Text>
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={32}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 32,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.5)",
                  "fontSize": 32,
                  "fontWeight": undefined,
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        30
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "height": 24,
                "width": 24,
              },
              false,
              null,
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                false,
                Object {
                  "flex": 0,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
            vbHeight={1024}
            vbWidth={1024}
          >
            <RNSVGPath
              d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
              fill={
                Array [
                  0,
                  0.996078431372549,
                  0.4470588235294118,
                  0.2980392156862745,
                  1,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              propList={
                Array [
                  "stroke",
                  "strokeWidth",
                  "fill",
                ]
              }
              stroke={
                Array [
                  0,
                  0.996078431372549,
                  0.4470588235294118,
                  0.2980392156862745,
                  1,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
            />
          </RNSVGSvgView>
        </View>
      </View>
      <View
        accessibilityLabel="Slider"
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            },
            Object {
              "flexDirection": "column",
              "height": 40,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.05)",
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 2,
                "height": 4,
              },
              Object {
                "borderRadius": 12,
                "height": 12,
              },
            ]
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#FE7862",
              "borderRadius": 12,
              "height": 12,
              "justifyContent": "center",
              "opacity": 0,
              "overflow": "hidden",
              "position": "absolute",
            }
          }
        />
        <View
          onLayout={[Function]}
          renderToHardwareTextureAndroid={true}
          style={
            Object {
              "backgroundColor": "#fff",
              "borderRadius": 48,
              "elevation": 2,
              "height": 48,
              "opacity": 0,
              "position": "absolute",
              "shadowColor": "rgba(0, 0, 0, 0.15)",
              "shadowOffset": Object {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.8,
              "shadowRadius": 8,
              "width": 48,
            }
          }
        />
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {},
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "marginLeft": 16,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "height": 24,
                "width": 24,
              },
              false,
              null,
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                false,
                Object {
                  "flex": 0,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
            vbHeight={1024}
            vbWidth={1024}
          >
            <RNSVGPath
              d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
              fill={
                Array [
                  0,
                  0.996078431372549,
                  0.4470588235294118,
                  0.2980392156862745,
                  1,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              propList={
                Array [
                  "stroke",
                  "strokeWidth",
                  "fill",
                ]
              }
              stroke={
                Array [
                  0,
                  0.996078431372549,
                  0.4470588235294118,
                  0.2980392156862745,
                  1,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
            />
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginTop": 9,
        }
      }
    >
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={24}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 24,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.45)",
                  "fontSize": 24,
                  "fontWeight": "normal",
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        最小
      </Text>
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={24}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 24,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.45)",
                  "fontSize": 24,
                  "fontWeight": "normal",
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        最大
      </Text>
    </View>
  </View>
</View>
`;

exports[`SiderCard Classic 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 28,
        "paddingBottom": 20,
        "paddingLeft": 24,
        "paddingRight": 24,
        "paddingTop": 20,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 48,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color={null}
      ellipsizeMode="tail"
      size={30}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 30,
              },
              Array [
                Object {
                  "color": "#3d3d3d",
                  "fontSize": 30,
                  "fontWeight": "normal",
                  "marginLeft": 0,
                },
                Object {},
              ],
            ],
          ],
        ]
      }
      type={null}
      weight={null}
    >
      title1
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        }
      }
    >
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={null}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                },
                Object {
                  "color": "#158CFB",
                  "marginRight": 5,
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        ·
      </Text>
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={30}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 30,
                },
                Object {
                  "color": "#158CFB",
                  "fontSize": 30,
                  "fontWeight": "normal",
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        0
        
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="Slider"
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            },
            Object {
              "flexDirection": "column",
              "height": 40,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#E3E9EE",
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 2,
                "height": 4,
              },
              Object {
                "borderRadius": 12,
                "height": 12,
              },
            ]
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#158CFB",
              "borderRadius": 12,
              "height": 12,
              "justifyContent": "center",
              "opacity": 0,
              "overflow": "hidden",
              "position": "absolute",
            }
          }
        />
        <View
          onLayout={[Function]}
          renderToHardwareTextureAndroid={true}
          style={
            Object {
              "backgroundColor": "#fff",
              "borderRadius": 52,
              "elevation": 2,
              "height": 52,
              "opacity": 0,
              "position": "absolute",
              "shadowColor": "rgba(0, 0, 0, 0.15)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.8,
              "shadowRadius": 4,
              "width": 52,
            }
          }
        />
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`SiderCard ClassicLargeSlider 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 28,
        "paddingBottom": 20,
        "paddingLeft": 24,
        "paddingRight": 24,
        "paddingTop": 20,
      },
      Object {},
    ]
  }
>
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="Slider"
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            },
            Object {
              "flexDirection": "column",
              "height": 76,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#E3E9EE",
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 2,
                "height": 4,
              },
              Object {
                "borderRadius": 72,
                "height": 72,
              },
            ]
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 72,
              "height": 72,
              "justifyContent": "center",
              "opacity": 0,
              "overflow": "hidden",
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#158CFB",
                "borderRadius": 60,
                "height": 60,
                "marginHorizontal": 6,
              }
            }
          />
        </View>
        <View
          onLayout={[Function]}
          renderToHardwareTextureAndroid={true}
          style={
            Object {
              "backgroundColor": "#fff",
              "borderRadius": 52,
              "elevation": 2,
              "height": 40,
              "opacity": 0,
              "position": "absolute",
              "shadowColor": "rgba(0,0,0,0.3)",
              "shadowOffset": Object {
                "height": 2,
                "width": 2,
              },
              "shadowOpacity": 1,
              "shadowRadius": 2,
              "width": 40,
            }
          }
        />
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`SiderCard Nordic 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 28,
        "paddingBottom": 48,
        "paddingLeft": 48,
        "paddingRight": 48,
        "paddingTop": 48,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 26,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "height": 32,
            "width": 32,
          },
          false,
          null,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
            false,
            Object {
              "flex": 0,
              "height": 32,
              "width": 32,
            },
          ]
        }
        vbHeight={1024}
        vbWidth={1024}
      >
        <RNSVGPath
          d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
          fill={
            Array [
              0,
              0.08235294117647059,
              0.5490196078431373,
              0.984313725490196,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "fill",
            ]
          }
          stroke={
            Array [
              0,
              0.08235294117647059,
              0.5490196078431373,
              0.984313725490196,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
        />
      </RNSVGSvgView>
    </View>
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color={null}
      ellipsizeMode="tail"
      size={32}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 32,
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.9)",
                  "fontSize": 32,
                  "fontWeight": "normal",
                  "marginLeft": 16,
                },
                Object {},
              ],
            ],
          ],
        ]
      }
      type={null}
      weight={null}
    >
      风速
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        }
      }
    >
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={null}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.9)",
                  "marginRight": 5,
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        ·
      </Text>
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={30}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 30,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.9)",
                  "fontSize": 30,
                  "fontWeight": "normal",
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        3
        档
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="Slider"
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            },
            Object {
              "flexDirection": "column",
              "height": 92,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#E3E9EE",
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 2,
                "height": 4,
              },
              Object {
                "borderRadius": 24,
                "height": 92,
              },
            ]
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 24,
              "height": 92,
              "justifyContent": "center",
              "opacity": 0,
              "overflow": "hidden",
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#158CFB",
                "borderRadius": 20,
                "height": 76,
                "marginHorizontal": 8,
              }
            }
          />
        </View>
        <View
          onLayout={[Function]}
          renderToHardwareTextureAndroid={true}
          style={
            Object {
              "backgroundColor": "#fff",
              "borderRadius": 52,
              "elevation": 2,
              "height": 28,
              "opacity": 0,
              "position": "absolute",
              "shadowColor": "rgba(0,0,0,0.3)",
              "shadowOffset": Object {
                "height": 2,
                "width": 2,
              },
              "shadowOpacity": 1,
              "shadowRadius": 2,
              "width": 6,
            }
          }
        />
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`SiderCard enum slider, custom render value 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 28,
        "paddingBottom": 48,
        "paddingLeft": 48,
        "paddingRight": 48,
        "paddingTop": 48,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 26,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "height": 32,
            "width": 32,
          },
          false,
          null,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
            false,
            Object {
              "flex": 0,
              "height": 32,
              "width": 32,
            },
          ]
        }
        vbHeight={1024}
        vbWidth={1024}
      >
        <RNSVGPath
          d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
          fill={
            Array [
              0,
              0.08235294117647059,
              0.5490196078431373,
              0.984313725490196,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "fill",
            ]
          }
          stroke={
            Array [
              0,
              0.08235294117647059,
              0.5490196078431373,
              0.984313725490196,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
        />
      </RNSVGSvgView>
    </View>
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color={null}
      ellipsizeMode="tail"
      size={32}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 32,
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.9)",
                  "fontSize": 32,
                  "fontWeight": "normal",
                  "marginLeft": 16,
                },
                Object {},
              ],
            ],
          ],
        ]
      }
      type={null}
      weight={null}
    >
      风速
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        }
      }
    >
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={null}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.9)",
                  "marginRight": 5,
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        ·
      </Text>
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={30}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 30,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.9)",
                  "fontSize": 30,
                  "fontWeight": "normal",
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        无
        
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="Slider"
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            },
            Object {
              "flexDirection": "column",
              "height": 92,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#E3E9EE",
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 2,
                "height": 4,
              },
              Object {
                "borderRadius": 24,
                "height": 92,
              },
            ]
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 24,
              "height": 92,
              "justifyContent": "center",
              "opacity": 0,
              "overflow": "hidden",
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#158CFB",
                "borderRadius": 20,
                "height": 76,
                "marginHorizontal": 8,
              }
            }
          />
        </View>
        <View
          onLayout={[Function]}
          renderToHardwareTextureAndroid={true}
          style={
            Object {
              "backgroundColor": "#fff",
              "borderRadius": 52,
              "elevation": 2,
              "height": 28,
              "opacity": 0,
              "position": "absolute",
              "shadowColor": "rgba(0,0,0,0.3)",
              "shadowOffset": Object {
                "height": 2,
                "width": 2,
              },
              "shadowOpacity": 1,
              "shadowRadius": 2,
              "width": 6,
            }
          }
        />
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`SiderCard enum slider, custom render value 2`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 28,
        "paddingBottom": 48,
        "paddingLeft": 48,
        "paddingRight": 48,
        "paddingTop": 48,
      },
      Object {
        "marginTop": 20,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 26,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "height": 32,
            "width": 32,
          },
          false,
          null,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
            false,
            Object {
              "flex": 0,
              "height": 32,
              "width": 32,
            },
          ]
        }
        vbHeight={1024}
        vbWidth={1024}
      >
        <RNSVGPath
          d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
          fill={
            Array [
              0,
              0.08235294117647059,
              0.5490196078431373,
              0.984313725490196,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "fill",
            ]
          }
          stroke={
            Array [
              0,
              0.08235294117647059,
              0.5490196078431373,
              0.984313725490196,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
        />
      </RNSVGSvgView>
    </View>
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color={null}
      ellipsizeMode="tail"
      size={32}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 32,
              },
              Array [
                Object {
                  "color": "rgba(0, 0, 0, 0.9)",
                  "fontSize": 32,
                  "fontWeight": "normal",
                  "marginLeft": 16,
                },
                Object {},
              ],
            ],
          ],
        ]
      }
      type={null}
      weight={null}
    >
      风速
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        }
      }
    >
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={null}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.9)",
                  "marginRight": 5,
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        ·
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            false,
            Array [
              false,
              Object {
                "color": "red",
              },
            ],
          ]
        }
      >
        无---
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="Slider"
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            },
            Object {
              "flexDirection": "column",
              "height": 92,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#E3E9EE",
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 2,
                "height": 4,
              },
              Object {
                "borderRadius": 24,
                "height": 92,
              },
            ]
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 24,
              "height": 92,
              "justifyContent": "center",
              "opacity": 0,
              "overflow": "hidden",
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#158CFB",
                "borderRadius": 20,
                "height": 76,
                "marginHorizontal": 8,
              }
            }
          />
        </View>
        <View
          onLayout={[Function]}
          renderToHardwareTextureAndroid={true}
          style={
            Object {
              "backgroundColor": "#fff",
              "borderRadius": 52,
              "elevation": 2,
              "height": 28,
              "opacity": 0,
              "position": "absolute",
              "shadowColor": "rgba(0,0,0,0.3)",
              "shadowOffset": Object {
                "height": 2,
                "width": 2,
              },
              "shadowOpacity": 1,
              "shadowRadius": 2,
              "width": 6,
            }
          }
        />
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`SiderCard enum slider, custom render value in Acrylic 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 32,
        "paddingBottom": 42,
        "paddingLeft": 40,
        "paddingRight": 40,
        "paddingTop": 42,
      },
      Object {
        "marginTop": 20,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 48,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "height": 20,
            "width": 20,
          },
          false,
          null,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
            false,
            Object {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={1024}
        vbWidth={1024}
      >
        <RNSVGPath
          d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
          fill={
            Array [
              0,
              0.996078431372549,
              0.47058823529411764,
              0.3843137254901961,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "fill",
            ]
          }
          stroke={
            Array [
              0,
              0.996078431372549,
              0.47058823529411764,
              0.3843137254901961,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
        />
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={32}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 32,
                },
                Array [
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontSize": 32,
                    "fontWeight": undefined,
                    "marginLeft": 16,
                  },
                  undefined,
                ],
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        Function
      </Text>
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={32}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 32,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.5)",
                  "fontSize": 32,
                  "fontWeight": undefined,
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        无
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="Slider"
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            },
            Object {
              "flexDirection": "column",
              "height": 40,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.05)",
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 2,
                "height": 4,
              },
              Object {
                "borderRadius": 12,
                "height": 12,
              },
            ]
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#FE7862",
              "borderRadius": 12,
              "height": 12,
              "justifyContent": "center",
              "opacity": 0,
              "overflow": "hidden",
              "position": "absolute",
            }
          }
        />
        <View
          onLayout={[Function]}
          renderToHardwareTextureAndroid={true}
          style={
            Object {
              "backgroundColor": "#fff",
              "borderRadius": 48,
              "elevation": 2,
              "height": 48,
              "opacity": 0,
              "position": "absolute",
              "shadowColor": "rgba(0, 0, 0, 0.15)",
              "shadowOffset": Object {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.8,
              "shadowRadius": 8,
              "width": 48,
            }
          }
        />
        <View
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {},
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginTop": 9,
        }
      }
    >
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={24}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 24,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.45)",
                  "fontSize": 24,
                  "fontWeight": "normal",
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        最小
      </Text>
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={24}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 24,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.45)",
                  "fontSize": 24,
                  "fontWeight": "normal",
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        最大
      </Text>
    </View>
  </View>
</View>
`;
